# kael-os

./: .env.example  .firebaserc  00_START_HERE.md  ANDROID_PLAN.md  APP_TRACKER_FIREBASE_INTEGRATION.md  BETA_LAUNCH_CHECKLIST.md  BETA_QUICK_START.txt  BETA_READY_TO_TEST.md  BETA_v0_3_0_RELEASE_SUMMARY.md  BUNDLING_IMPLEMENTATION_COMPLETE.md  CHAT_UI_FIXES.md  COMPLETE_TEST_REPORT.md  Cargo.toml  DELIVERY_CHECKLIST.md  DEPENDENCIES_AND_BUNDLING.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_PACKAGE_GUIDE.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_VISUAL_SUMMARY.md  FINAL_INSTALLATION_SUMMARY.md  FIREBASE.md  FIREBASE_INTEGRATION_GUIDE.md  HARDWARE_DETECTION_COMPLETION.md  HARDWARE_DETECTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INSTALLATION_GUIDE.md  INSTALLATION_SOLUTION_DELIVERED.md  INSTALLATION_SOLUTION_SUMMARY.md  LAUNCH_ANNOUNCEMENT.md  MANIFEST.md  MANUAL_TEST_GUIDE.md  OAUTH_FRONTEND_GUIDE.md  OAUTH_IMPLEMENTATION.md  OAUTH_INTEGRATION.md  OAUTH_SETUP_COMPLETE.md  OPTIMIZED_PUBLISHING_PLAN.md  PKGBUILD  PUBLISHING.md  (+25 more)
arch/: index.html
cloud-functions/: README.md  firebase.json  index.js  package.json
crates/services/: Cargo.toml
crates/services/src/: firebase.rs  lib.rs  system_context.rs
crates/services/src/llm/: mod.rs
crates/services/src/llm/providers/: mistral.rs  mod.rs  ollama.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
pkgbuild/: PKGBUILD
public/: oauth-modal.html  oauth.html
repo/: index.html
scripts/: backup-source.sh  build-arch-installer.sh  deploy-webdisk.sh  install-all.sh  install-direct.sh  (+3 more)
(+60 files in other folders)
