[package]
name = "kael-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
